--- a/FormPacientes/FormPacientes.csproj
+++ b/FormPacientes/FormPacientes.csproj
@@ -67,8 +67,11 @@
     <Compile Include="Formularios\PacienteFrm.Designer.cs">
       <DependentUpon>PacienteFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\DepartamentoMedico.cs" />
+    <Compile Include="Modelos\Paciente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicios\RegistroPaciente.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
